<resources>
    <string name="app_name">创赢房管家</string>
    <string name="empty"></string>
    <string name="username">姓名:</string>
    <string name="useremail">邮箱:</string>
    <string name="account">账号:</string>
    <string name="checkupdate">检查更新</string>
    <string name="Notloggedin">未登录</string>
    <string name="logintips">您还未登录，请立即登录</string>
    <string name="userphone">电话:</string>
    <string name="user_applycountry">报税申请国家:</string>
    <string name="user_applycountry1">报税申请国家:</string>
    <string name="user_applycountry2">税号申请国家:</string>
    <string name="message_recommendation">消息推荐</string>
    <string name="currency">币种</string>
    <string name="today_Expired">今日到期</string>
    <string name="today">今日</string>
    <string name="property_taxes">房产税</string>
    <string name="housing_loan">房屋贷款</string>
    <string name="submitted_remind">交房提醒</string>
    <string name="days">天</string>
    <string name="left">还剩</string>
    <string name="maintenance_project">维修项目</string>
    <string name="expired">到期</string>
    <string name="remaining_date">还剩%1s天</string>
    <string name="apply_address">申请房产地址:</string>
    <string name="apply_price">申请房产总价:</string>
    <string name="apply_date">申请时间:</string>
    <string name="apply_scale">申请比例:</string>
    <string name="hint_name">请输入您的姓名</string>
    <string name="hint_email">请输入您的邮箱</string>
    <string name="hint_phone">请输入您的电话</string>
    <string name="register_error_confirm_password">两次输入的密码不一致</string>
    <string name="register_error_auth_code">短信验证码错误</string>
    <string name="register_error_mobile">请输入正确的手机号码</string>
    <string name="register_error_email">请输入正确的邮箱</string>
    <string name="codesentsuccessfully">验证码发送成功</string>
    <string name="sentsuccessfully">发送成功</string>
    <string name="login_email">请登录邮箱</string>
    <string name="check_email">查收并通过邮箱验证</string>
    <string name="Resend_mail">重新发送验证邮箱</string>
    <string name="phone">手机</string>
    <string name="Mobile_success">手机验证成功</string>
    <string name="takephotobycamera">拍照</string>
    <string name="takephotobyalbum">从相册中选取</string>
    <string name="register_error_password">密码必须由6–16个英文字母、数字或符号组成</string>
    <string name="registerVerificationbyemail">您已成功注册,请登录邮箱通过验证即可登录</string>
    <string name="register_error_real_name">请填写身份证上的真实姓名</string>
    <string name="hint_country">请输入您要申请报税的国家</string>
    <string name="tip_taxapply">仅支持中国大陆!请填写您的真实信息以便于我们与您联系。</string>
    <string name="csPhone">4001 606 602</string>
    <string name="Login">登录</string>
    <string name="LoginTitle">登录</string>
    <string name="SignUp">没有账号——现在注册</string>
    <string name="home">首页</string>
    <string name="remind">动态</string>
    <string name="center">我的</string>
    <string name="cancel">取消</string>
    <string name="account_security">账户安全</string>
    <string name="confirm">确认</string>
    <string name="in_retal">出租中</string>
    <string name="in_idle">闲置中</string>
    <string name="replace_mailbox">更换邮箱</string>
    <string name="mailbox_binding">邮箱绑定</string>
    <string name="phone_binding">手机绑定</string>
    <string name="error_email">邮箱格式不正确</string>
    <string name="error_pwd">密码错误</string>
    <string name="error_phone">手机号码格式不正确</string>
    <string name="success_changepwd">密码修改成功,请重新登录</string>
    <string name="select_picture">选择图片</string>
    <string name="sd_tip">请确认已经插入SD卡</string>
    <string name="already_confirmed">已确认</string>
    <string name="not_confirmed">未确认</string>
    <string name="setting">设置</string>
    <string name="loan_apply_tip">您的申请已提交，我们会在两个工作日内与您联系并为您办理相关业务。如有疑问请拨打房管家的服务热线－<a href="tel:4001 606 602">4001 606 602</a></string>
    <string name="houseMoney">租金跟踪</string>
    <string name="houseLease">租赁管理</string>
    <string name="houseInfo">房产情况</string>
    <string name="houseRepair">房产维修</string>
    <string name="remindHouse">缴纳金额提醒</string>
    <string name="remindRent">租金提醒</string>
    <string name="remindRepair">维修提醒</string>
    <string name="remindManager">物业经理提醒</string>
    <string name="remindMedium">中介提醒</string>
    <string name="remindSys">系统提醒</string>
    <string name="acctounHint">请输入账号</string>
    <string name="passwordHint">请输入密码</string>
    <string name="loan_details">贷款详情</string>
    <string name="success_tips">成功提示</string>
    <string name="resetpwd_tips">重置密码的邮件已发送到你的邮箱中，请注意查收。</string>
    <string name="account_error">帐号错误,请输入(手机/邮箱)</string>
    <string name="tax_details">报税详情</string>
    <string name="forgetPassWord">忘记密码？</string>
    <string name="defNickName">昵称:大哥猫</string>
    <string name="avatar_modification_success">头像修改成功</string>
    <string name="account_cancellation_success">账号注销成功</string>
    <string name="manager">物业经理</string>
    <string name="proposal">意见反馈</string>
    <string name="taxnum_apply">税号申请</string>
    <string name="successful_modification">修改成功</string>
    <string name="taxnum_apply_country">税号申请国家</string>
    <string name="tax_apply">报税申请</string>
    <string name="loan_apply">申请贷款</string>
    <string name="loan_apply2">贷款申请</string>
    <string name="rental_income">租金收入</string>
    <string name="management_expenses">管理费用</string>
    <string name="insurance_cost">保险费用</string>
    <string name="property_costs">物业费用</string>
    <string name="ohters">其他</string>
    <string name="back">返回</string>
    <string name="safety">账号安全</string>
    <string name="share">分享给&#8230;</string>
    <string name="more">更多</string>
    <string name="regEmail">请输入帐号(手机/邮箱)</string>
    <string name="regRealname">真实姓名</string>
    <string name="regPhone">手机号码</string>
    <string name="regPwd1">请输入账户密码</string>
    <string name="regPwd2">请确认账户密码</string>
    <string name="regSubmit">提交注册</string>
    <string name="regTitle">免费注册</string>
    <string name="findPwdHint">请填写您要找回的账号(手机/邮箱)：</string>
    <string name="findPwd">找回密码</string>
    <string name="findPwdTitle">忘记密码</string>
    <string name="net_income">净收入: </string>
    <string name="netWorkError">网络异常,请检查网络&#8230;</string>
    <string name="webViewTitle">创赢房管家</string>
    <string name="rentList">租赁列表</string>
    <string name="rentDetail">租赁信息</string>
    <string name="labHouseAddress">房产地址：</string>
    <string name="labStartDate">开始日期：</string>
    <string name="labEndDate">结束日期：</string>
    <string name="labOpDay">剩余天数：</string>
    <string name="labRentFrey">交租频率：</string>
    <string name="labRentTime">交租时间：</string>
    <string name="labRentMonth">月&#160;&#160;租&#160;&#160;金：</string>
    <string name="labRentModel">支付方式：</string>
    <string name="rentPeopleList">租客清单</string>
    <string name="rentPeopleName">姓名</string>
    <string name="rentPeopleJob">职业</string>
    <string name="rentPeopleCredit">信用状况</string>
    <string name="bindmobile">绑定手机号码</string>
    <string name="yourmobile">你的手机号：</string>
    <string name="repairHouse">维修列表</string>
    <string name="repairDetail">维修详情</string>
    <string name="labRepairTitle">维修事项：</string>
    <string name="labRepairCost">预计花销：</string>
    <string name="labRepairTime">预计耗时：</string>
    <string name="labRepairBefore">维&#160;&#160;修&#160;&#160;前：</string>
    <string name="labRepairAfter">维&#160;&#160;修&#160;&#160;后：</string>
    <string name="repairNoPic">图片未上载</string>
    <string name="houseList">房产列表</string>
    <string name="houseDetail">房产详细</string>
    <string name="houseImage">房产图片</string>
    <string name="labHouseBulidYear">建造年份：</string>
    <string name="labHouseArea">使用面积：</string>
    <string name="labHousePrice">购买价格：</string>
    <string name="labHouseTracTime">过户时间：</string>
    <string name="labHouseType">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型：</string>
    <string name="labHouseModel">房&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型：</string>
    <string name="labHouseRoom">房&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;间：</string>
    <string name="labHouseBath">卫&#160;&#160;生&#160;&#160;间：</string>
    <string name="labHouseTax">房&#160;&#160;产&#160;&#160;税：</string>
    <string name="labHouseFee">物&#160;&#160;业&#160;&#160;费：</string>
    <string name="labHouseInsurance">保&#160;&#160;险&#160;&#160;费：</string>
    <string name="rentCount">统计</string>
    <string name="rentLease">租约</string>
    <string name="rentMust">应收租金：</string>
    <string name="warned_details">提醒详情</string>
    <string name="rentAlready">已收租金：</string>
    <string name="rentOwe">拖欠租金：</string>
    <string name="rentalDetailDate">日期</string>
    <string name="rentalDetailAlready">已收租金</string>
    <string name="rentalDetailOwe">拖欠租金</string>
    <string name="rentalDetail">租金跟踪详情</string>
    <string name="rentalMonth">本月</string>
    <string name="rental3Month">季度</string>
    <string name="rentalYeay">年度</string>
    <string name="moreAboutUs">关于我们</string>
    <string name="morePresent">功能介绍</string>
    <string name="moreWelcome">欢迎页</string>
    <string name="moreUpdate">版本更新</string>
    <string name="moreCurrency">币种</string>
    <string name="moreQuestion">常见问题</string>
    <string name="btnFeedBack">提交反馈</string>
    <string name="feedBackTitle">感谢您提出的意见</string>
    <string name="btnRelieveText">解除关系</string>
    <string name="relieveMessage">解除关系之后，您的物业经理将无法继续查看房产相关信息。是否解除关系？</string>
    <string name="emptyTip">请让您的物业经理登录\nwww.greatkeeper.com，输入相应的房产\n租约信息。详情请咨询4001606602</string>
    <string name="logout">退出登录</string>
    <string name="updatePwd">登录密码修改</string>
    <string name="updateUserinfo">个人信息修改</string>
    <string name="RMB">人民币</string>
    <string name="myInfo">我的信息</string>
    <string name="registerbymobile">手机注册</string>
    <string name="registerbyemail">邮箱注册</string>
    <string name="editTextNickName">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称：</string>
    <string name="editTextRealName">真实姓名：</string>
    <string name="editTextMobile">手机号码：</string>
    <string name="save">保存</string>
    <string name="updateInfoTitle">信息修改</string>
    <string name="updatePwdTitle">密码修改</string>
    <string name="editOldPwd">原&#160;&#160;密&#160;&#160;码：</string>
    <string name="editNewPwd">新&#160;&#160;密&#160;&#160;码：</string>
    <string name="editPwdConfirm">再次输入：</string>
    <string name="btnSavePwd">提交修改</string>
    <string name="textChanngeHead">点击更换头像</string>
    <string name="confirmDelRemind">确认删除一条消息？</string>
    <string name="System_prompt">系统提示</string>
    <string name="in_development">财富通正在开发中，敬请期待！</string>
    <string name="startNow">立&#160;&#160;即&#160;&#160;体&#160;&#160;验</string>
    <string name="homeText01">房产情况</string>
    <string name="homeText02">租赁管理</string>
    <string name="homeText03">房产维修</string>
    <string name="homeText04">租金明细</string>
    <string name="homeText05">缴费提醒</string>
    <string name="homeText06">房源推荐</string>
    <string name="homeText07">个税缴纳</string>
    <string name="homeText08">贷款办理</string>
    <string name="homeText09">财富通</string>
    <string name="apply_email">申请邮箱:</string>
    <string name="apply_name">申请人姓名:</string>
    <string name="apply_phone">申请电话:</string>
    <string name="regok">注册成功</string>
    <string name="reg_tips">请先阅读并同意注册协议</string>
    <string name="regoktips">您已成功注册成为创赢房管家用户。</string>
    <string name="friendly_reminder">友情提示:请填写您的真实信息以便于我们与您联系。</string>
    <string name="tax_tips">提示:您的账号暂无税号/报税申请业务,如需办理请点击申请。</string>
    <string name="loan_tips">提示:您的账号暂无贷款办理业务,如需办理请点击申请贷款。</string>
    <string name="submit_applications">提交申请</string>
    <string name="apply_country">申请国家:</string>
    <string name="apply_state">申请状态:</string>
    <string name="loan_price">贷款金额 :</string>
    <string name="loan_interest">贷款利率 :</string>
    <string name="loan_state">贷款状态  :</string>
    <string name="loan_address">贷款房产 :</string>
    <string name="sendVCode">发送验证码</string>
    <string name="labMobile">手机号：</string>
    <string name="hintMobile">请输入手机号码</string>
    <string name="tipMobile">仅支持中国大陆手机用户使用</string>
    <string name="callPhone">呼叫</string>
    <string name="name">姓名:</string>
</resources>