<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#EEEEEE">
   <include layout="@layout/top_view2"/>
    <TextView android:padding="10dp" android:layout_width="match_parent" android:background="#EEEEEE" android:layout_height="wrap_content" android:textColor="@color/gray" android:textSize="@dimen/textSizeMinor" android:text="@string/tip_taxapply"
           />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">
      
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/til_name"
        android:paddingTop="5dp"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/textSizeMain"
            android:text="@string/name"
            android:layout_marginLeft="5dp"/>
        <EditText
            android:hint="@string/hint_name"
            style="@style/apply_edittext"
            android:layout_marginLeft="5dp"
            android:id="@+id/apply_et_name"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/til_email"
            android:paddingTop="2dp"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSizeMain"
                android:text="@string/useremail"
                android:layout_marginLeft="5dp"/>

            <EditText
                style="@style/apply_edittext"
                android:hint="@string/hint_email"
                android:layout_marginTop="5dp"
                android:inputType="textEmailSubject"
                android:id="@+id/apply_et_email"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/til_phone"
            android:paddingTop="5dp"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSizeMain"
                android:text="@string/userphone"
                android:layout_marginLeft="5dp"/>
            <EditText
                style="@style/apply_edittext"
                android:layout_marginTop="5dp"
                android:inputType="phone"
                android:hint="@string/hint_phone"
                android:id="@+id/apply_et_phone"/>

       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:id="@+id/til_area"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSizeMain"
                android:text="@string/user_applycountry1"
                android:layout_marginLeft="5dp"/>
             <EditText
               style="@style/apply_edittext"
                 android:hint="@string/hint_country"
                 android:singleLine="true"
                 android:editable="false"
                 android:id="@+id/apply_tv_area"/>
        </LinearLayout>


      
    
    <Button android:layout_width="match_parent" 
        android:textColor="@color/white"
        android:id="@+id/bt_taxsubmit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_bg_selector"
        android:layout_height="45dp"
        android:text="@string/submit_applications"  />
    </LinearLayout>
            


</LinearLayout>