<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaxApplyActivity">
   <include layout="@layout/top_view2"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" >

        <TextView
                  android:padding="10dp"
                  android:layout_width="match_parent"
                  android:background="#EEEEEE"
                  android:layout_height="wrap_content"
                  android:textColor="@color/gray"
                  android:textSize="@dimen/textSizeMinor"
                  android:text="@string/tip_taxapply"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSizeMain"
                android:text="@string/username"
                android:layout_marginLeft="5dp"/>
            <EditText
                   android:hint="@string/apply_name"
                   style="@style/apply_edittext"
                    android:id="@+id/apply_et_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/white"
            android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="@dimen/textSizeMain"
                        android:text="@string/useremail"
                        android:layout_marginLeft="5dp"/>
                    <EditText
                       style="@style/apply_edittext"
                       android:hint="@string/apply_email"
                       android:inputType="textEmailSubject"
                       android:id="@+id/apply_et_email"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSizeMain"
                android:text="@string/userphone"
                android:layout_marginLeft="5dp"/>
            <EditText
               style="@style/apply_edittext"
               android:inputType="phone"
               android:hint="@string/apply_phone"
               android:id="@+id/apply_et_phone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:id="@+id/layout_address"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSizeMain"
                android:text="@string/apply_address"
                android:editable="false"
                android:layout_marginLeft="5dp"/>
            <EditText
               style="@style/apply_edittext"
               android:hint="@string/apply_address"
               android:id="@+id/apply_et_address"/>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/white"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSizeMain"
                android:text="@string/apply_price"
                android:layout_marginLeft="5dp"/>
             <EditText
               style="@style/apply_edittext"
               android:hint="@string/apply_price"
               android:inputType="number"
               android:layout_marginTop="5dp"
               android:id="@+id/apply_et_total"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/textSizeMain"
                android:text="@string/apply_scale"
                android:layout_marginLeft="5dp"
                />
              <EditText
               style="@style/apply_edittext"
               android:hint="@string/apply_scale"
               android:layout_marginTop="5dp"
               android:id="@+id/apply_et_bili"/>
            </LinearLayout>

    </LinearLayout>


    <Button android:layout_width="match_parent"
            android:textColor="@color/white"
            android:id="@+id/bt_loansubmit"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_bg_selector"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/submit_applications"  />

</LinearLayout>