<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/corners_bg" >
    
    <TextView 
        android:id="@+id/tvPhone"
        android:text="@string/csPhone"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="18dip"
        android:layout_marginBottom="18dip"
        android:layout_centerHorizontal="true" />
	<ImageView 
	    android:id="@+id/imgLine"
	    android:layout_below="@id/tvPhone"
	    android:layout_height="1dip"
	    android:layout_width="match_parent"
	    android:background="@color/lineColor"
	    android:contentDescription="@string/empty" />
	<LinearLayout 
	    android:layout_below="@id/imgLine"
	    android:orientation="horizontal" 
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:gravity="center" >
	    
	    <Button 
	        android:id="@+id/btnCallCancel"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="45dip"
	        android:background="@null"
	        android:text="@string/cancel"
	        android:textSize="18sp"
	        android:textColor="@color/orange" />
	    
	    <ImageView
	        android:layout_width="1dip"
	        android:layout_height="match_parent"
	        android:background="@color/lineColor"
	        android:contentDescription="@string/empty" />
	    
	    <Button 
	        android:id="@+id/btnCall"
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="45dip"
	        android:background="@null"
	        android:text="@string/callPhone"
	        android:textSize="18sp"
	        android:textColor="@color/orange" />
	    
	</LinearLayout>
	
</RelativeLayout>